--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,50 @@
-Django>=5.0,<6.0
-celery>=5.3,<6.0
-redis>=5.0,<6.0
-django-redis>=5.4,<6.0
-django-ratelimit>=4.1,<5.0
-requests>=2.31,<3.0
-python-dotenv>=1.0,<2.0
-# Uncomment if using PostgreSQL instead of SQLite
-# psycopg2-binary>=2.9,<3.0
+amqp==5.3.1
+asgiref==3.9.1
+billiard==4.2.1
+black==24.10.0
+celery==5.5.3
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+coverage==7.10.6
+Django==5.2.5
+django-debug-toolbar==4.4.6
+django-ip-geolocation==1.6.1
+django-ratelimit==4.1.0
+django-redis==5.4.0
+flake8==6.1.0
+idna==3.10
+iniconfig==2.1.0
+isort==5.13.2
+kombu==5.5.4
+mccabe==0.7.0
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
+prompt_toolkit==3.0.52
+pycodestyle==2.11.1
+pyflakes==3.1.0
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.1
+pytest-django==4.11.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+redis==5.3.1
+requests==2.32.5
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.3
+svgwrite==1.4.3
+Tree==0.2.4
+tzdata==2025.2
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
